--- a/backend/package.json
+++ b/backend/package.json
@@ -17,10 +17,12 @@
   "dependencies": {
     "@types/express": "^5.0.3",
     "@types/node": "^24.1.0",
+    "@types/supertest": "^6.0.3",
     "@types/uuid": "^10.0.0",
     "drizzle-orm": "^0.44.3",
     "express": "^5.1.0",
     "pg": "^8.16.3",
+    "supertest": "^7.1.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "uuid": "^11.1.0"
