--- a/backend/package.json
+++ b/backend/package.json
@@ -18,8 +18,10 @@
     "@types/express": "^5.0.3",
     "@types/node": "^24.1.0",
     "@types/uuid": "^10.0.0",
+    "bcryptjs": "^3.0.2",
     "drizzle-orm": "^0.44.3",
     "express": "^5.1.0",
+    "jsonschema": "^1.5.0",
     "pg": "^8.16.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
