--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "@types/supertest": "^6.0.3",
     "@types/uuid": "^10.0.0",
     "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
     "drizzle-orm": "^0.44.3",
     "express": "^5.1.0",
     "jsonschema": "^1.5.0",
@@ -30,6 +31,7 @@
     "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/pg": "^8.15.4",
     "dotenv": "^17.2.1",
     "drizzle-kit": "^0.31.4",
