--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -41,6 +41,9 @@ jobs:
     - name: Install backend dependencies
       run: npm install
       working-directory: ./backend
+    - name: Run type check
+      run: npm run type-check
+      working-directory: ./backend
     - name: Build backend
       run: npm run build
       working-directory: ./backend
