--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,4 @@
 PORT=3000
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/auto_order?schema=public"
 JWT_SECRET="superdupersecret"
+RESEND_API_KEY="apikey"
