--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "jsonschema": "^1.5.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
+    "resend": "^4.7.0",
     "supertest": "^7.1.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
