--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "express": "^5.1.0",
     "jsonschema": "^1.5.0",
     "jsonwebtoken": "^9.0.2",
+    "node-cron": "^4.2.1",
     "pg": "^8.16.3",
     "resend": "^4.7.0",
     "supertest": "^7.1.4",
