--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "jsonwebtoken": "^9.0.2",
     "node-cron": "^4.2.1",
     "pg": "^8.16.3",
+    "puppeteer": "^24.15.0",
     "resend": "^4.7.0",
     "supertest": "^7.1.4",
     "ts-node": "^10.9.2",
