CORS parametrization on backend

--- a/production.env.example
+++ b/production.env.example
@@ -2,7 +2,10 @@
 # Used by docker-compose.prod.yml
 
 # The base URL for the backend API, used by the frontend
-VITE_API_BASE_URL=http://localhost:3000
+VITE_API_BASE_URL=http://localhost:3000/api
 
 # API key for Resend service
 RESEND_API_KEY=your_resend_api_key_here
+
+# The frontend origin for CORS policy
+CORS_ORIGIN=http://localhost:5173
