--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,3 +2,4 @@ PORT=3000
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/auto_order?schema=public"
 JWT_SECRET="superdupersecret"
 RESEND_API_KEY="apikey"
+CORS_ORIGIN="http://localhost:5173"
