--- a/production.env.example
+++ b/production.env.example
@@ -9,3 +9,6 @@ RESEND_API_KEY=your_resend_api_key_here
 
 # The frontend origin for CORS policy
 CORS_ORIGIN=http://localhost:5173
+
+# Environment ('production' or 'local')
+ENVIRONMENT=production
