--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,3 +3,4 @@ DATABASE_URL="postgresql://postgres:postgres@localhost:5432/auto_order?schema=pu
 JWT_SECRET="superdupersecret"
 RESEND_API_KEY="apikey"
 CORS_ORIGIN="http://localhost:5173"
+ENVIRONMENT="local"
