--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   traefik:
     image: traefik:v3.0
@@ -27,7 +25,7 @@ services:
       # (Optional) Expose the dashboard on port 8080.
       - "8080:8080"
     volumes:
-      - "/var/run/docker.sock:/var/run/docker.sock:ro"
+      - "${XDG_RUNTIME_DIR}/docker.sock:/var/run/docker.sock:ro"
       - "letsencrypt_data:/letsencrypt"
     networks:
       - prod_network
@@ -49,10 +47,12 @@ services:
     command: npm run start
     networks:
       - prod_network
+    cap_add:
+      - SYS_ADMIN
     labels:
       - "traefik.enable=true"
-      # IMPORTANT: Change your-domain.com to your actual domain.
-      - "traefik.http.routers.backend.rule=Host(`timely.tier-zero.co.uk`) && PathPrefix(`/api`)"
+      # Use the domain from the .env file for the routing rule.
+      - "traefik.http.routers.backend.rule=Host(`${DOMAIN_NAME}`) && PathPrefix(`/api`)"
       - "traefik.http.routers.backend.entrypoints=websecure"
       - "traefik.http.routers.backend.tls.certresolver=letsencrypt"
       # Define a middleware to strip the /api prefix.
@@ -74,8 +74,8 @@ services:
       - prod_network
     labels:
       - "traefik.enable=true"
-      # IMPORTANT: Change your-domain.com to your actual domain.
-      - "traefik.http.routers.frontend.rule=Host(`timely.tier-zero.co.uk`)"
+      # Use the domain from the .env file for the routing rule.
+      - "traefik.http.routers.frontend.rule=Host(`${DOMAIN_NAME}`)"
       - "traefik.http.routers.frontend.entrypoints=websecure"
       - "traefik.http.routers.frontend.tls.certresolver=letsencrypt"
       - "traefik.http.services.frontend.loadbalancer.server.port=80"
