--- a/test.env.example
+++ b/test.env.example
@@ -2,13 +2,13 @@
 # Used by docker-compose.prod.yml
 
 # The base URL for the backend API, used by the frontend
-VITE_API_BASE_URL=https://timely.tier-zero.co.uk
+VITE_API_BASE_URL=https://localhost
 
 # API key for Resend service
 RESEND_API_KEY=your-resend-api-key
 
 # The frontend origin for CORS policy
-CORS_ORIGIN=https://timely.tier-zero.co.uk
+CORS_ORIGIN=https://localhost
 
 # Env
 ENVIRONMENT=production
@@ -16,4 +16,4 @@ JWT_SECRET=your-super-secret-jwt-key
 PORT=3000
 
 # Domain name for Traefik routing
-DOMAIN_NAME=timely.tier-zero.co.uk
+DOMAIN_NAME=localhost
