--- a/docker-compose.prod.gcp.yml
+++ b/docker-compose.prod.gcp.yml
@@ -47,6 +47,8 @@ services:
     command: npm run start
     networks:
       - prod_network
+    cap_add:
+      - SYS_ADMIN
     labels:
       - "traefik.enable=true"
       # Use the domain from the .env file for the routing rule.
