--- a/test.env.example
+++ b/test.env.example
@@ -1,5 +1,4 @@
-# This file contains production environment variables.
-# Used by docker-compose.prod.yml
+# This file contains test environment variables.
 
 # The base URL for the backend API, used by the frontend
 VITE_API_BASE_URL=https://localhost
