--- a/backend/package.json
+++ b/backend/package.json
@@ -43,6 +43,7 @@
     "dotenv": "^17.2.1",
     "drizzle-kit": "^0.31.4",
     "esbuild": "^0.25.8",
+    "vite": "^7.1.4",
     "vitest": "^3.2.4"
   },
   "overrides": {
